fix: overflow

--- a/index.css
+++ b/index.css
@@ -80,7 +80,6 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     aspect-ratio: 1;
-    overflow: hidden;
 }
 
 .cell {
